Fixed overlapping toy card and footer

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ footer p {
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
+  margin-bottom: 20px;
 }
 
 #toy-list div {
